--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -20,11 +20,76 @@
     letter-spacing: -0.04em;
 }
 
-.gpt__header-content p {
+.gpt3__header-content p {
     font-family: var(--font-family);
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
     line-height: 27px;
-    color: #81AFDD;
+    color: var(--color-text);
+    margin-top: 1.5rem;
 }
+
+.gpt3__header-content__input{
+    width: 100%;
+    margin: 2rem 0 1rem;
+    display: flex;
+}
+
+.gpt3__header-content__input input{
+    background: black;
+    border-radius: 5px 0px 0px 5px;
+    border: 2px solid var(--color-footer);
+    font-size: 20px;
+    line-height: 27px;
+    color: white;
+    font-family: var(--font-family);
+    flex: 2;
+    width: 100%;
+    min-height: 50px;
+    outline: none;
+    padding: 0 1rem;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.gpt3__header-content__input button{
+    background: orangered;
+    border-radius: 5px 0px 0px 5px;
+    font-size: 20px;
+    line-height: 27px;
+    font-weight: bold;
+    font-style: normal;
+    color: white;
+    font-family: var(--font-family);
+    flex: 0.6;
+    width: 100%;
+    min-height: 50px;
+    cursor: pointer;
+    outline: none;
+    padding: 0 1rem;
+    border: none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.gpt3__header-content__people{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.gpt3__header-content__people img{
+    width: 181.79px;
+    height: 38px;
+}
+
+.gpt3__header-content__people p{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 38px;
+}
+
